2007-09-05  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adam and Niko.

        Force run-webkit-tests to not run the tests in platform/mac

        * platform/win/Skipped:

2007-09-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff Garen.

        Don't log DumpRenderTree injected properties in fast/dom/Window/window-properties.html.  This change makes
        it pass on Windows so it can be removed from the Skipped list.

        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/Window/window-properties.html:
        * platform/win/Skipped:

2007-09-05  David Harrison  <harrison@apple.com>

        Reviewed by Kevin Decker.

        Testcase for:
        <rdar://problem/5306171> Mail: The first return after an attachment in multipart/mixed message is lost

        * editing/selection/toString-1-expected.txt: Added.
        * editing/selection/toString-1.html: Added.

2007-09-04  Oliver Hunt  <oliver@apple.com>

        RS=Adam
        
        Moving a number of mac specific tests into LayoutTests/platform/mac so that they
        don't need to be in the windows Skiplist.
        
        This includes most of the tests that used textInputController as it is a test
        of the mac-specific NSTextInput API.

        * editing/deleting/5300379-expected.checksum: Removed.
        * editing/deleting/5300379-expected.png: Removed.
        * editing/deleting/5300379-expected.txt: Removed.
        * editing/deleting/5300379.html: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.checksum: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.png: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.txt: Removed.
        * editing/deleting/delete-to-end-of-paragraph.html: Removed.
        * editing/deleting/smart-delete-003-expected.checksum: Removed.
        * editing/deleting/smart-delete-003-expected.png: Removed.