@@ -19,83 +19,6 @@ function doTest()
         }
         alert("objCPlugin()=" + result);
     }
-
-    if (window.objCPluginFunction) {
-        // Type should be "function"
-        alert("typeof(objCPluginFunction)=" + typeof(objCPluginFunction));
-
-        // Calling objCPluginFunction() should return "test"
-        var result;
-        try {
-            result = objCPluginFunction();
-        } catch (e) {
-            result = e.name;
-        }
-        alert("objCPluginFunction()=" + result);
-
-        function echoTest(arg) {
-            var echo = objCPlugin.echo(arg);
-            var sameVal = (arg == echo) ? "same" : "different";
-            var sameType = (typeof(arg) == typeof(echo)) ? "same" : "different";
-
-            alert(arg + " = " + echo + " (" + sameVal + ")");
-            alert(typeof(arg) + " = " + typeof(echo) + " (" + sameType + ")");
-        }
-
-        // Test the echo function
-        echoTest("hello");
-        echoTest(42);
-        echoTest(null);
-        echoTest(undefined);
-        echoTest(new Array("one", "two"));
-        
-        // Test exceptions
-        function exceptionTest(arg) {
-        	try {
-        		objCPlugin.throwIfArgumentIsNotHello(arg);
-        	} catch (e) {
-        		alert("String " + arg + " != Hello");
-        		return;
-        	}
-        	
-        	alert("String " + arg + " == Hello");
-        }
-        
-        exceptionTest("Hello");
-        exceptionTest("Not Hello");
-    }
-    
-    // Test the C plugin
-    var cPlugin = document.getElementById("testCPlugin");
-    if (cPlugin) {
-        // Type should be "function"
-        alert("typeof(cPlugin)=" + typeof(cPlugin));
-        
-        // Calling cPlugin() should return 1
-        var result;
-        try {
-            result = cPlugin();
-        } catch (e) {
-            result = e.name;
-        }
-        alert("cPlugin()=" + result);
-
-        // Special function that removes cPlugin's default method implementation.  The runtime should consider
-        // cPlugin an "object" if it has no default method.
-        cPlugin.removeDefaultMethod();
-
-        // Type should be "object"
-        alert("typeof(cPlugin)=" + typeof(cPlugin));
-        
-        // Calling cPlugin() now should raise an exception
-        var result;
-        try {
-            result = cPlugin();
-        } catch (e) {
-            result = e.name;
-        }
-        alert("cPlugin()=" + result);
-    }
 }
 </script>
 </head>
